2010-03-10  Mike Crowe <mac@mcrowe.com>

	* Ensure that the exit status is set appropriately when incorrect
	options are passed.

	* Convert from CVS to git.

2008-07-22  Mike Crowe <mac@fysh.org>

	* Integrate fix for compiling against newer versions of libstdc++
	from Peter Hartley.

	* Released as v1.08.

2006-10-05  Mike Crowe <mac@fysh.org>

	* Fix copyright date in main.cpp.

2006-09-28  Mike Crowe <mac@fysh.org>

	* Add man page and improve README. 

	* Rename --dump-all option as --dump-all-headers, add --version
	option.

	* Released as v1.07

2006-06-25  Mike Crowe <mac@fysh.org>

	* Fix bug in ID3v2 handling reported by Jacob Singh. There was no
	attempt made to actually read in the right amount of data before
	writing out the ID3v2 header. The fix also takes into account that
	the ID3v2 tag may not fit in the input buffer.

	* Released as v1.06	

2006-01-23  Mike Crowe <mac@fysh.org>

	* Incorporate a few clever autoconf macros from the
	autoconf-archive so that we can use <stdint.h> type names.

	* Reinstate STDBOOL - just don't build the release on something
	too old.

	* Remove unnecessary debug of character at 128 bytes from the end
	of the file.
	
	* Released as v1.05

2004-05-04  Mike Crowe <mac@fysh.org>

	* Update mp3_processor.cpp to remove debugging code.

	* Update main.cpp so that the -D short option is correctly
	supported.

	* Released as v1.04

2004-02-12  Mike Crowe <mac@fysh.org>

	* Update configure.in to include size_t check. Can't use STDBOOL
	as recommended by autoscan because old autoconf doesn't grok it.

	* Lose warning from newer automakes regarding += in Makefile.am.

2004-02-10  Mike Crowe <mac@fysh.org>

	* Released as v1.03

2004-02-10  Mike Crowe <mac@fysh.org>

	* Fix some packaging problems
	* Released as v1.02

2004-02-10  Mike Crowe <mac@fysh.org>

	* Now compiles on GCC3 in addition to GCC2.

2004-02-07  Mike Crowe <mac@fysh.org>

	* Released as v1.01

2004-02-06  Mike Crowe <mac@fysh.org>
